syntax = "proto3";

option csharp_namespace = "Geek.Server";

package service;

service Inner {
  rpc Invoke (RpcMessage) returns (RpcReply);
}

message RpcMessage {
  int32 msgId = 1;
  bytes data = 2;
  int64 actorId = 3;
  int32 serverId = 4;
}

message RpcReply {
  int32 msgId = 1;
  bytes data = 2;
  int32 code = 3;
}